--- a/newEquipmentpage/audiopage.html
+++ b/newEquipmentpage/audiopage.html
@@ -126,6 +126,10 @@
         padding-left: 20px;
     }
 
+    .col-sm-4 {
+        display: none;
+    }
+
     .spacer {
         height: 29px;
         width: 100%;
@@ -138,6 +142,7 @@
 
     .padding {
         padding-left: 10px;
+        padding-top: 15px;
     }
 
     .itemBox {
@@ -335,7 +340,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Headphones">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/Headphones_optimized_5000.jpg" />
             </a>
-            <br>
             <div class="padding">
                 Headphones
             </div>
@@ -344,7 +348,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/AudioCables">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/cables.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Cables &amp; Adapters
             </div>
@@ -353,7 +356,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/MicStands">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/micStand1.JPG" />
             </a>
-            <br>
             <div class="padding">
                 Mic Stands &amp; Accessories
             </div>
@@ -362,7 +364,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Microphones">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/mic1.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Microphones
             </div>
@@ -371,7 +372,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/MIDIControllers">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/midi.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 MIDI Controllers
             </div>
@@ -380,7 +380,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Mixers">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/mixer.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Mixers
             </div>
@@ -389,7 +388,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Speakers">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pasystem.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 PA Systems &amp; Portable Speakers
             </div>
@@ -398,7 +396,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/AudioInterfaces">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/recorder2.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Recorders &amp; USB Interfaces
             </div>
@@ -407,7 +404,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/VideoProdAudioAccessories">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/videoProd.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Video Production Accessories
             </div>
@@ -430,15 +426,4 @@
       document.getElementById("Audio").style.display = "block"
       document.getElementById("close").style.display = "none"
     }
-
-    //working to fix window resizing issue
-    // window.addEventListener('resize', function() {
-    // // Code to execute when the screen size changes
-    // if (window.innerWidth > 768) {
-    //     document.getElementById("Sidebar").style.display = "block"
-    //     document.getElementById("info").style.display = "block"
-    //     document.getElementById("itemTitle").style.display = "none"
-    //     document.getElementsByClassName("spacer").style.display = "none"
-    // }
-    // });
 </script>
