--- a/newEquipmentpage/compPage.html
+++ b/newEquipmentpage/compPage.html
@@ -124,6 +124,7 @@
 
     .padding {
         padding-left: 10px;
+        padding-top: 15px;
     }
 
     .itemBox {
@@ -316,7 +317,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/ComputerCables">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/cablesComputing.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Cables &amp; Adapters
             </div>
@@ -325,7 +325,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/DrawingTablets">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/drawingtab.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Drawing Tablets &amp; Accessories
             </div>
@@ -334,7 +333,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/FileStorage">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/filereader.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 File Storage &amp; Media Readers
             </div>
@@ -343,7 +341,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Laptops">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/laptops.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Laptops &amp; Peripherals
             </div>
