--- a/newEquipmentpage/gamingPage.html
+++ b/newEquipmentpage/gamingPage.html
@@ -124,6 +124,7 @@
 
     .padding {
         padding-left: 10px;
+        padding-top: 15px;
     }
 
     .itemBox {
@@ -314,7 +315,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/GamingConsoles">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/controllers2.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Consoles &amp; Controllers
             </div>
@@ -323,7 +323,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Nintendo">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/nintendogames4.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Nintendo Switch Games
             </div>
@@ -332,7 +331,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/PlayStation">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/PS5GAMES2.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 PlayStation Games
             </div>
@@ -341,7 +339,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/VR">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/vr.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 VR Consoles &amp; Controllers
             </div>
