--- a/newEquipmentpage/makerPage.html
+++ b/newEquipmentpage/makerPage.html
@@ -124,6 +124,7 @@
 
     .padding {
         padding-left: 10px;
+        padding-top: 15px;
     }
 
     .itemBox {
@@ -315,25 +316,14 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/ButtonMakers">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/button.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Button Makers
             </div>
         </div>
-        <!-- <div class="itemBox">
-            <a href="https://bookit.cmc.jhu.edu/reserve/Microprocessors">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Microprocessors.png" /> 
-            </a>
-            <br>
-            <div class="padding">
-                Micro&shy;processors
-            </div>
-        </div> -->
         <div class="itemBox">
             <a href="https://bookit.cmc.jhu.edu/reserve/Sewing">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/sewing.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Sewing &amp; Textiles
             </div>
@@ -342,7 +332,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Tools">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/tools.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Tools
             </div>
