--- a/newEquipmentpage/photoPage.html
+++ b/newEquipmentpage/photoPage.html
@@ -124,6 +124,7 @@
 
     .padding {
         padding-left: 10px;
+        padding-top: 15px;
     }
 
     .itemBox {
@@ -315,7 +316,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Cameras">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/camera.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Camera Kits
             </div>
@@ -324,7 +324,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Lenses">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/lenses.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Lenses
             </div>
@@ -333,18 +332,32 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Lights">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/lighting.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Lighting &amp; Grip
             </div>
         </div>
         <div class="itemBox">
             <a href="https://bookit.cmc.jhu.edu/reserve/Tripods">
-                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/lighting.JPG" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/tripod.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Tripods &amp; Supports
+            </div>
+        </div>
+        <div class="itemBox">
+            <a href="https://bookit.cmc.jhu.edu/reserve/VideoAccessories">
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/videoacc.JPG" /> 
+            </a>
+            <div class="padding">
+                Video Accessories
+            </div>
+        </div>
+        <div class="itemBox">
+            <a href="https://bookit.cmc.jhu.edu/reserve/VideoCameras">
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/vidcam.JPG" /> 
+            </a>
+            <div class="padding">
+                Video Camera Kits
             </div>
         </div>
         <div class="spacer"></div>
