--- a/newEquipmentpage/projector.html
+++ b/newEquipmentpage/projector.html
@@ -124,6 +124,7 @@
 
     .padding {
         padding-left: 10px;
+        padding-top: 15px;
     }
 
     .itemBox {
@@ -321,7 +322,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Projectors">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/projector.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Projectors
             </div>
