--- a/newHomepage/bookitIntro.html
+++ b/newHomepage/bookitIntro.html
@@ -17,9 +17,9 @@
             microphones, and more. You can also check out in-lab resources
             like computers, software, and other tools for your projects! -->
             <b>Pardon our dust...</b> <br>
-            This website/booking system (DMC's Bookit) is currently under construction. You should still be able to make bookings and reservations. If you experience any difficulties, please contact us at 410-516-3817.
+            This website/booking system (CMC's Bookit) is currently under construction. You should still be able to make bookings and reservations. If you experience any difficulties, please contact us at 410-516-3817.
             <br>Thank you,<br>
-            DMC Staff
+            CMC Staff
         </p>
     </div>
 </div>
