--- a/newHomepage/faqNew.html
+++ b/newHomepage/faqNew.html
@@ -154,7 +154,7 @@
                         an equipment, printing, and knowledge resource for students
                         interested in exploring creative uses of emerging media and technology
                         to communicate their ideas.<br><br>More information about the
-                        CMC can be found on our <a href="https://studentaffairs.jhu.edu/dmc/">JHU
+                        CMC can be found on our <a href="https://studentaffairs.jhu.edu/cmc/">JHU
                         student affairs website</a>.</p>
                 </div>
                 <!-- Step 2 -->
@@ -197,7 +197,7 @@
                         long as you remain a JHU student.
                         <br><br>
                         You can also watch our orientation video from the comfort of your home 
-                        right <a href="https://jhu.campusgroups.com//DMC/survey?survey_uid=5e904a56-1c0a-11ee-8b14-0a86d64fe70d&feedback_event_id=&content_type=&content_type_id=">
+                        right <a href="https://jhu.campusgroups.com//CMC/survey?survey_uid=5e904a56-1c0a-11ee-8b14-0a86d64fe70d&feedback_event_id=&content_type=&content_type_id=">
                             here.
                         </a> Please keep in mind that it may take some time to be authorized as a member,
                         as student staff will need to add you to our system after verifying the membership 
