--- a/newHomepage/firstTime.html
+++ b/newHomepage/firstTime.html
@@ -8,6 +8,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        font-family: "Figtree", sans-serif;
+    }
+
+    .img {
+        width: 50px;
+        height: 50px;
     }
 
     .infoBars {
@@ -75,6 +81,8 @@
         height: 30px;
     }
 
+
+
     /* Shorten the title on mobile */
     #title-short {
         display: none;
@@ -138,14 +146,24 @@
 </head>
 
 <div class="main-cont">
+    <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/quackCircle.png">
+    <h1 font-size="36px">
+        Welcome to the CMC!
+    </h1>
+
+        BookIt is the interface for checking out equipment from the CMC.
+        We have a wide range of equipment including cameras,
+        microphones, and more. You can also check out in-lab resources
+        like computers, software, and other tools for your projects!
+
+</div>
+
+<div class="main-cont">
     <div class="infoBars">
         <div class="infoBars-content">
-
-            <h1 id="firstTime">New to the DMC?</h1>
-                
-            <p id="firstTimeIntro">Before you can check-out items, you must first become
-                a <i>member</i> of the DMC.
-                Follow these steps to become a member:</p>
+            <h1 id="firstTimeIntro">Before you can check-out items, you must first become
+                a <i>member</i> of the CMC.
+                Follow these steps to become a member:</h1>
 
 
             <div class="step-container">
@@ -164,7 +182,7 @@
                 <div class="step">
                     <div class="step-header">
                         <div class="step-number">2</div>
-                        <h2>Come to the DMC</h2>
+                        <h2>Come to the CMC</h2>
                     </div>
                     <p>Come in person during our open hours. We are at 3003 N
                         Charles St, right between FedEx
