--- a/newHomepage/oldfaqFormat.html
+++ b/newHomepage/oldfaqFormat.html
@@ -260,15 +260,15 @@
                 <a onclick="hideShow_FAQ_answer(event)">
                     <div class="FAQ_question-bar">
                         <span class="infoBars-hideShow">+</span>
-                        <div> What is the DMC?</div>
+                        <div> What is the CMC?</div>
                     </div>
                 </a>
                 <div class="FAQ_answer">
-                    The Digital Media Center (DMC) is a multimedia lab space and
+                    The Digital Media Center (CMC) is a multimedia lab space and
                     an equipment, printing, and knowledge resource for students
                     interested in exploring creative uses of emerging media and technology
                     to communicate their ideas.<br><br>More information about the
-                    DMC can be found on our <a href="https://studentaffairs.jhu.edu/dmc/">JHU
+                    CMC can be found on our <a href="https://studentaffairs.jhu.edu/cmc/">JHU
                         student affairs website</a>.
                 </div>
             </div>
@@ -276,13 +276,13 @@
                 <a onclick="hideShow_FAQ_answer(event)">
                     <div class="FAQ_question-bar">
                         <span class="infoBars-hideShow">+</span>
-                        <div> Who can use the DMC?</div>
+                        <div> Who can use the CMC?</div>
                     </div>
                 </a>
                 <div class="FAQ_answer">
-                    To use most DMC resources, such as equipment checkouts &
+                    To use most CMC resources, such as equipment checkouts &
                     in-lab workstations, you must first become a "member" of the
-                    DMC.<br><br>To attend DMC workshops and events or use our Pharos laser
+                    CMC.<br><br>To attend CMC workshops and events or use our Pharos laser
                     printers, you must simply be a Johns Hopkins student with an active
                     J-Card.
                 </div>
@@ -295,10 +295,10 @@
                     </div>
                 </a>
                 <div class="FAQ_answer">
-                    If you are an eligible student, come into the DMC anytime we
+                    If you are an eligible student, come into the CMC anytime we
                     are open and let the front desk staff know you'd like to become
                     a member. We will show you a short orientation video and
-                    enroll you in our booking system. Your DMC Membership will be active as
+                    enroll you in our booking system. Your CMC Membership will be active as
                     long as you remain a JHU student.<br><br><strong>Membership is free
                         for:</strong>
                     <ul>
@@ -364,7 +364,7 @@
                     </div>
                 </a>
                 <div class="FAQ_answer">
-                    Be a DMC member and ask one of our staff members which item
+                    Be a CMC member and ask one of our staff members which item
                     you'd like authorizations on. As long as a qualified staffer and
                     the equipment are available, we will then train you on how to
                     use it which usually includes a short video and a one-on-one
@@ -376,11 +376,11 @@
                 <a onclick="hideShow_FAQ_answer(event)">
                     <div class="FAQ_question-bar">
                         <span class="infoBars-hideShow">+</span>
-                        <div>How do I <b>print</b> at the DMC?</div>
+                        <div>How do I <b>print</b> at the CMC?</div>
                     </div>
                 </a>
                 <div class="FAQ_answer">
-                    The DMC offers a variety of professional-quality
+                    The CMC offers a variety of professional-quality
                     <b>self-service</b> printing and imaging tools, from photo and document printing
                     to 3D-printing and large-format poster printers.<br><br>Traditional
                     document printing is available at our in-lab Pharos Kiosk,
@@ -392,11 +392,11 @@
                 <a onclick="hideShow_FAQ_answer(event)">
                     <div class="FAQ_question-bar">
                         <span class="infoBars-hideShow">+</span>
-                        <div> How do I <b>3D-print</b> at the DMC?</div>
+                        <div> How do I <b>3D-print</b> at the CMC?</div>
                     </div>
                 </a>
                 <div class="FAQ_answer">
-                    The DMC offers self-service 3D printing on Prusa i3 MK3S
+                    The CMC offers self-service 3D printing on Prusa i3 MK3S
                     printers with a selection of filaments available for purchase
                     (charged by the hour). You must first be authorized on the 3D printers in
                     order to reserve them. Set up an appointment at the front desk or
@@ -411,7 +411,7 @@
                     </div>
                 </a>
                 <div class="FAQ_answer">
-                    After becoming a member of the DMC, you can check out a
+                    After becoming a member of the CMC, you can check out a
                     simple point and shoot camera without the need for an authorization. To checkout
                     more advanced cameras like DSLRs, you must first complete an
                     authorization on our intro-level photo/video cameras (Canon
