--- a/page.html
+++ b/page.html
@@ -157,7 +157,7 @@
 
         // Check for authed items on equipment pages only
         // (to preserve resources on other pages)
-        if (/^https:\/\/bookit\.dmc\.jhu\.edu\/equipment\?/.test(window.location.href) || /^https:\/\/bookit\.dmc\.jhu\.edu\/reserve/.test(window.location.href)) {
+        if (/^https:\/\/bookit\.cmc\.jhu\.edu\/equipment\?/.test(window.location.href) || /^https:\/\/bookit\.cmc\.jhu\.edu\/reserve/.test(window.location.href)) {
             // Create auth banner template element that can be inserted
             var authBanner = document.createElement("span");
             authBanner.classList.add("auth-banner");
@@ -295,7 +295,7 @@
 
         // Check for authed items on equipment pages only
         // (wrapped like this to preserve resources on other pages)
-        if (/^https:\/\/bookit\.dmc\.jhu\.edu\/equipment\/item\//.test(window.location.href)) {
+        if (/^https:\/\/bookit\.cmc\.jhu\.edu\/equipment\/item\//.test(window.location.href)) {
             // get the equipment ID from the end of the URL
             var equipmentID = window.location.href.split("/").pop();
             // check if the equipment ID is in the masterAuthList
@@ -305,7 +305,7 @@
                 authDisclaimer.classList.add("auth-disclaimer");
                 // Disclaimer text
                 var disclaimerText = "<p><strong>This item requires a one-time authorization before you can make a reservation.</strong> ";
-                disclaimerText += "To get authorized, come to the DMC anytime we're open and ask to get trained at the front desk. ";
+                disclaimerText += "To get authorized, come to the CMC anytime we're open and ask to get trained at the front desk. ";
                 disclaimerText += "If you are unsure of your authorization status, click the button to view a list of your trainings alongside your membership status.</p>";
                 authDisclaimer.innerHTML = disclaimerText;
                 // Disclaimer button to check authorization status
@@ -407,7 +407,7 @@
 
     <!-- STAFF LOGIN TEXT CHANGE -->
     <script>
-        // Script to change the text "Login to LibApps" to "DMC Staff Login"
+        // Script to change the text "Login to LibApps" to "CMC Staff Login"
         // in the footer of the LibApps public pages
 
         // on DOM load, run the function
@@ -419,7 +419,7 @@
             // Be extra sure we have the right link
             if (loginLink[0].id == "s-lc-sign-in") {
                 // Change the text
-                loginLink[0].innerHTML = "DMC Staff Login";
+                loginLink[0].innerHTML = "CMC Staff Login";
             };
         });
     </script>
@@ -433,7 +433,7 @@
         // on equipment item pages when the page loads.
 
         // If on an equipment item page (URL="https://bookit.cmc.jhu.edu/equipment/item/...")
-        if (/https:\/\/bookit\.dmc\.jhu\.edu\/equipment\/item\/.?/.test(window.location.href)) {
+        if (/https:\/\/bookit\.cmc\.jhu\.edu\/equipment\/item\/.?/.test(window.location.href)) {
             console.log("Auto Collapse Other Items: On equipment item page")
             // On page load, call collapseOtherItems() function
             window.onload = collapseOtherItems;
@@ -537,16 +537,16 @@
         if (
             window.innerWidth > 768 &&
             (
-                /https:\/\/bookit\.dmc\.jhu\.edu\/equipment\/item\/.?/.test(url) ||
-                /https:\/\/bookit\.dmc\.jhu\.edu\/space\/.?/.test(url)
+                /https:\/\/bookit\.cmc\.jhu\.edu\/equipment\/item\/.?/.test(url) ||
+                /https:\/\/bookit\.cmc\.jhu\.edu\/space\/.?/.test(url)
             )
         ) {
             addColumnResizerDynamic();
             // else if on equipment of space category page
         } else if (
-            /https:\/\/bookit\.dmc\.jhu\.edu\/reserve.?/.test(url) ||
-            /https:\/\/bookit\.dmc\.jhu\.edu\/spaces.?/.test(url) ||
-            /https:\/\/bookit\.dmc\.jhu\.edu\/equipment\/.?/.test(url)
+            /https:\/\/bookit\.cmc\.jhu\.edu\/reserve.?/.test(url) ||
+            /https:\/\/bookit\.cmc\.jhu\.edu\/spaces.?/.test(url) ||
+            /https:\/\/bookit\.cmc\.jhu\.edu\/equipment\/.?/.test(url)
         ) {
             addColumnResizerDynamic();
         };
@@ -1039,7 +1039,7 @@
 
         /* Individual image ratios */
 
-        #discover-dmc {
+        #discover-cmc {
             flex-basis: 27%;
         }
 
@@ -1051,7 +1051,7 @@
             flex-basis: 15%;
         }
 
-        #discover-dmc-mobile {
+        #discover-cmc-mobile {
             display: none;
         }
 
@@ -1074,7 +1074,7 @@
             }
 
             /* Mobile Formatting */
-            #discover-dmc {
+            #discover-cmc {
                 flex-basis: 0%;
             }
 
@@ -1086,13 +1086,13 @@
                 flex-basis: 23%;
             }
 
-            #discover-dmc-mobile {
+            #discover-cmc-mobile {
                 display: block;
                 padding-top: 10px;
                 margin-bottom: -20px;
             }
 
-            #discover-dmc-mobile img {
+            #discover-cmc-mobile img {
                 max-width: 100%;
             }
         }
@@ -1705,8 +1705,8 @@
         <div id="custom-header">
             <a href="https://bookit.cmc.jhu.edu/">
                 <div id="header-row">
-                    <div id="discover-dmc"><img
-                            src="https://libapps.s3.amazonaws.com/customers/9396/images/discover_DMC.png"></div>
+                    <div id="discover-cmc"><img
+                            src="https://libapps.s3.amazonaws.com/customers/9396/images/discover_CMC.png"></div>
                     <div id="bookit-bubble"><img
                             src="https://libapps.s3.amazonaws.com/customers/9396/images/bookit_bubble.png"></div>
                     <div id="quack-laptop"><img
@@ -1721,7 +1721,7 @@
             <div class="col-md-12">
                 <nav aria-label="Breadcrumb">
                     <ol class="breadcrumb">
-                        <li><a href="https://jhu-dmc.libcal.com">JHU Digital Media Center</a></li>
+                        <li><a href="https://jhu-cmc.libcal.com">JHU Digital Media Center</a></li>
 
                         <li class="s-lc-desktop-only"><a href="https://bookit.cmc.jhu.edu">BookIt</a></li>
 
@@ -1762,7 +1762,7 @@
                                 <div class="form-group form-group-sm">
                                     <label class="hidden-sm" for="lid">Location</label>
                                     <select class="form-control" name="lid" id="lid" disabled="disabled">
-                                        <option value="16257" selected="selected">DMC Equipment and Lab Spaces</option>
+                                        <option value="16257" selected="selected">CMC Equipment and Lab Spaces</option>
                                     </select>
                                 </div>
                                 <div class="form-group form-group-sm">
