--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         // Check for authed items on equipment pages only
         // (to preserve resources on other pages)
-        if (/^https:\/\/bookit\.dmc\.jhu\.edu\/equipment\?/.test(window.location.href) || /^https:\/\/bookit\.dmc\.jhu\.edu\/reserve/.test(window.location.href)) {
+        if (/^https:\/\/bookit\.cmc\.jhu\.edu\/equipment\?/.test(window.location.href) || /^https:\/\/bookit\.cmc\.jhu\.edu\/reserve/.test(window.location.href)) {
             // Create auth banner template element that can be inserted
             var authBanner = document.createElement("span");
             authBanner.classList.add("auth-banner");
@@ -260,7 +260,7 @@
 
         // Check for authed items on equipment pages only
         // (wrapped like this to preserve resources on other pages)
-        if (/^https:\/\/bookit\.dmc\.jhu\.edu\/equipment\/item\//.test(window.location.href)) {
+        if (/^https:\/\/bookit\.cmc\.jhu\.edu\/equipment\/item\//.test(window.location.href)) {
             // get the equipment ID from the end of the URL
             var equipmentID = window.location.href.split("/").pop();
             // check if the equipment ID is in the masterAuthList
@@ -270,7 +270,7 @@
                 authDisclaimer.classList.add("auth-disclaimer");
                 // Disclaimer text
                 var disclaimerText = "<p><strong>This item requires a one-time authorization before you can make a reservation.</strong> ";
-                disclaimerText += "To get authorized, come to the DMC anytime we're open and ask to get trained at the front desk. ";
+                disclaimerText += "To get authorized, come to the CMC anytime we're open and ask to get trained at the front desk. ";
                 disclaimerText += "If you are unsure of your authorization status, click the button to view a list of your trainings alongside your membership status.</p>";
                 authDisclaimer.innerHTML = disclaimerText;
                 // Disclaimer button to check authorization status
@@ -372,7 +372,7 @@
 
     <!-- STAFF LOGIN TEXT CHANGE -->
     <script>
-        // Script to change the text "Login to LibApps" to "DMC Staff Login"
+        // Script to change the text "Login to LibApps" to "CMC Staff Login"
         // in the footer of the LibApps public pages
 
         // on DOM load, run the function
@@ -384,7 +384,7 @@
             // Be extra sure we have the right link
             if (loginLink[0].id == "s-lc-sign-in") {
                 // Change the text
-                loginLink[0].innerHTML = "DMC Staff Login";
+                loginLink[0].innerHTML = "CMC Staff Login";
             };
         });
     </script>
@@ -398,7 +398,7 @@
         // on equipment item pages when the page loads.
 
         // If on an equipment item page (URL="https://bookit.cmc.jhu.edu/equipment/item/...")
-        if (/https:\/\/bookit\.dmc\.jhu\.edu\/equipment\/item\/.?/.test(window.location.href)) {
+        if (/https:\/\/bookit\.cmc\.jhu\.edu\/equipment\/item\/.?/.test(window.location.href)) {
             console.log("Auto Collapse Other Items: On equipment item page")
             // On page load, call collapseOtherItems() function
             window.onload = collapseOtherItems;
@@ -502,16 +502,16 @@
         if (
             window.innerWidth > 768 &&
             (
-                /https:\/\/bookit\.dmc\.jhu\.edu\/equipment\/item\/.?/.test(url) ||
-                /https:\/\/bookit\.dmc\.jhu\.edu\/space\/.?/.test(url)
+                /https:\/\/bookit\.cmc\.jhu\.edu\/equipment\/item\/.?/.test(url) ||
+                /https:\/\/bookit\.cmc\.jhu\.edu\/space\/.?/.test(url)
             )
         ) {
             addColumnResizerDynamic();
             // else if on equipment of space category page
         } else if (
-            /https:\/\/bookit\.dmc\.jhu\.edu\/reserve.?/.test(url) ||
-            /https:\/\/bookit\.dmc\.jhu\.edu\/spaces.?/.test(url) ||
-            /https:\/\/bookit\.dmc\.jhu\.edu\/equipment\/.?/.test(url)
+            /https:\/\/bookit\.cmc\.jhu\.edu\/reserve.?/.test(url) ||
+            /https:\/\/bookit\.cmc\.jhu\.edu\/spaces.?/.test(url) ||
+            /https:\/\/bookit\.cmc\.jhu\.edu\/equipment\/.?/.test(url)
         ) {
             addColumnResizerDynamic();
         };
@@ -1004,7 +1004,7 @@
 
         /* Individual image ratios */
 
-        #discover-dmc {
+        #discover-cmc {
             flex-basis: 27%;
         }
 
@@ -1016,7 +1016,7 @@
             flex-basis: 15%;
         }
 
-        #discover-dmc-mobile {
+        #discover-cmc-mobile {
             display: none;
         }
 
@@ -1039,7 +1039,7 @@
             }
 
             /* Mobile Formatting */
-            #discover-dmc {
+            #discover-cmc {
                 flex-basis: 0%;
             }
 
@@ -1051,13 +1051,13 @@
                 flex-basis: 23%;
             }
 
-            #discover-dmc-mobile {
+            #discover-cmc-mobile {
                 display: block;
                 padding-top: 10px;
                 margin-bottom: -20px;
             }
 
-            #discover-dmc-mobile img {
+            #discover-cmc-mobile img {
                 max-width: 100%;
             }
         }
@@ -1670,8 +1670,8 @@
         <div id="custom-header">
             <a href="https://bookit.cmc.jhu.edu/">
                 <div id="header-row">
-                    <div id="discover-dmc"><img
-                            src="https://libapps.s3.amazonaws.com/customers/9396/images/discover_DMC.png"></div>
+                    <div id="discover-cmc"><img
+                            src="https://libapps.s3.amazonaws.com/customers/9396/images/discover_CMC.png"></div>
                     <div id="bookit-bubble"><img
                             src="https://libapps.s3.amazonaws.com/customers/9396/images/bookit_bubble.png"></div>
                     <div id="quack-laptop"><img
@@ -1686,7 +1686,7 @@
             <div class="col-md-12">
                 <nav aria-label="Breadcrumb">
                     <ol class="breadcrumb">
-                        <li><a href="https://jhu-dmc.libcal.com">JHU Digital Media Center</a></li>
+                        <li><a href="https://jhu-cmc.libcal.com">JHU Digital Media Center</a></li>
 
                         <li class="s-lc-desktop-only"><a href="https://bookit.cmc.jhu.edu">BookIt</a></li>
 
@@ -3075,7 +3075,7 @@
                                                                 <td><span class="s-lc-time">12pm &ndash; 11:30pm</span>
                                                                 </td>
                                                                 <td><span class="s-lc-closed s-lc-h-excep">Closed</span>
-                                                                    <span class="s-lc-note s-lc-h-excep">for DMC staff
+                                                                    <span class="s-lc-note s-lc-h-excep">for CMC staff
                                                                         event</span></td>
                                                                 <td><span class="s-lc-closed">Closed</span></td>
                                                                 <td><span class="s-lc-closed">Closed</span></td>
@@ -3816,8 +3816,8 @@
                                             </div>
                                             <!-- <div id="s-lc-content-text-80903" class="s-lc-content-text s-lc-content cf"> -->
                                                 <!-- Description: Discover Logo on Homepage of BookIt for Mobile --><!-- NOTE: Styling depends on `QuackHeader/quackHeader.css` -->
-                                                <!-- <div id="discover-dmc-mobile"><img
-                                                        src="https://libapps.s3.amazonaws.com/customers/9396/images/discover_DMC.png" />
+                                                <!-- <div id="discover-cmc-mobile"><img
+                                                        src="https://libapps.s3.amazonaws.com/customers/9396/images/discover_CMC.png" />
                                                 </div>
 
 
@@ -3874,20 +3874,20 @@
                                         <a onclick="hideShow_FAQ_answer(event)">
                                             <div class="FAQ_question-bar">
                                                 <span class="FAQ_hideShow">&#9650;</span>
-                                                What is the DMC?
+                                                What is the CMC?
                                             </div>
                                         </a>
                                         <div class="FAQ_answer">
-                                            The Digital Media Center (DMC) is a multimedia lab space and
+                                            The Digital Media Center (CMC) is a multimedia lab space and
                                             an
                                             equipment, printing, and knowledge resource for students
                                             interested
                                             in exploring creative uses of emerging media and technology
                                             to
                                             communicate their ideas.<br><br>More information about the
-                                            DMC can
+                                            CMC can
                                             be found on our <a
-                                                href="https://studentaffairs.jhu.edu/dmc/">JHU
+                                                href="https://studentaffairs.jhu.edu/cmc/">JHU
                                                 student affairs website</a>.
                                         </div>
                                     </div>
@@ -3895,15 +3895,15 @@
                                         <a onclick="hideShow_FAQ_answer(event)">
                                             <div class="FAQ_question-bar">
                                                 <span class="FAQ_hideShow">&#9650;</span>
-                                                Who can use the DMC?
+                                                Who can use the CMC?
                                             </div>
                                         </a>
                                         <div class="FAQ_answer">
-                                            To use most DMC resources, such as equipment checkouts &
+                                            To use most CMC resources, such as equipment checkouts &
                                             in-lab
                                             workstations, you must first become a "member" of the
-                                            DMC.<br><br>To
-                                            attend DMC workshops and events or use our Pharos laser
+                                            CMC.<br><br>To
+                                            attend CMC workshops and events or use our Pharos laser
                                             printers,
                                             you must simply be a Johns Hopkins student with an active
                                             J-Card.
@@ -3917,13 +3917,13 @@
                                             </div>
                                         </a>
                                         <div class="FAQ_answer">
-                                            If you are an eligible student, come into the DMC anytime we
+                                            If you are an eligible student, come into the CMC anytime we
                                             are
                                             open and let the front desk staff know you'd like to become
                                             a
                                             member. We will show you a short orientation video and
                                             enroll you in
-                                            our booking system. Your DMC Membership will be active as
+                                            our booking system. Your CMC Membership will be active as
                                             long as
                                             you remain a JHU student.<br><br><strong>Membership is free
                                                 for:</strong>
@@ -3999,7 +3999,7 @@
                                             </div>
                                         </a>
                                         <div class="FAQ_answer">
-                                            Be a DMC member and ask one of our staff members which item
+                                            Be a CMC member and ask one of our staff members which item
                                             you'd
                                             like authorizations on. As long as a qualified staffer and
                                             the
@@ -4016,11 +4016,11 @@
                                         <a onclick="hideShow_FAQ_answer(event)">
                                             <div class="FAQ_question-bar">
                                                 <span class="FAQ_hideShow">&#9650;</span>
-                                                How do I <b>print</b> at the DMC?
+                                                How do I <b>print</b> at the CMC?
                                             </div>
                                         </a>
                                         <div class="FAQ_answer">
-                                            The DMC offers a variety of professional-quality
+                                            The CMC offers a variety of professional-quality
                                             <b>self-service</b>
                                             printing and imaging tools, from photo and document printing
                                             to
@@ -4036,11 +4036,11 @@
                                         <a onclick="hideShow_FAQ_answer(event)">
                                             <div class="FAQ_question-bar">
                                                 <span class="FAQ_hideShow">&#9650;</span>
-                                                How do I <b>3D-print</b> at the DMC?
+                                                How do I <b>3D-print</b> at the CMC?
                                             </div>
                                         </a>
                                         <div class="FAQ_answer">
-                                            The DMC offers self-service 3D printing on Prusa i3 MK3S
+                                            The CMC offers self-service 3D printing on Prusa i3 MK3S
                                             printers
                                             with a selection of filaments available for purchase
                                             (charged by the
@@ -4058,7 +4058,7 @@
                                             </div>
                                         </a>
                                         <div class="FAQ_answer">
-                                            After becoming a member of the DMC, you can check out a
+                                            After becoming a member of the CMC, you can check out a
                                             simple point
                                             and shoot camera without the need for an authorization. To
                                             checkout
@@ -4089,9 +4089,9 @@
                                                 Phone:<span class="unbold"> 410-516-3817</span>
                                             </div>
                                         </a>
-                                        <a id="email-button" href="mailto:dmcstaff@jhu.edu">
+                                        <a id="email-button" href="mailto:cmcstaff@jhu.edu">
                                             <div>
-                                                Email:<span class="unbold"> dmcstaff@jhu.edu</span>
+                                                Email:<span class="unbold"> cmcstaff@jhu.edu</span>
                                             </div>
                                         </a>
                                         <a id="discord-button" href="https://discord.gg/REWwqgP9mP">
@@ -4099,12 +4099,12 @@
                                                 Help channel in Discord
                                             </div>
                                         </a>
-                                        <a id="insta-button" href="https://www.instagram.com/dmcjhu/">
+                                        <a id="insta-button" href="https://www.instagram.com/cmcjhu/">
                                             <div>
                                                 Instagram
                                             </div>
                                         </a>
-                                        <a id="linktree-button" href="https://linktr.ee/dmcjhu">
+                                        <a id="linktree-button" href="https://linktr.ee/cmcjhu">
                                             <div>
                                                 Linktree
                                             </div>
