--- a/newEquipmentpage/otherPage.html
+++ b/newEquipmentpage/otherPage.html
@@ -123,6 +123,7 @@
 
     .padding {
         padding-left: 10px;
+        padding-top: 15px;
     }
 
     .itemBox {
@@ -313,7 +314,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/Bags">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/posterTube.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Portable Storage &amp; Transport
             </div>
@@ -322,7 +322,6 @@
             <a href="https://bookit.cmc.jhu.edu/reserve/ACPowerCables">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/extenstion.JPG" /> 
             </a>
-            <br>
             <div class="padding">
                 Power Cables &amp; Portable Power
             </div>
