updated README and naming

--- a/newHomepage/banner.html
+++ b/newHomepage/banner.html
@@ -15,8 +15,6 @@
         align-items: center;
     }
 
-    /* Individual main button styles */
-
     .two-main-butts-cont {
         display: flex;
         flex-direction: row;
@@ -270,6 +268,8 @@
 </head>
 <div>
     <div class="slideshow-container">
+
+        <!-- Beginning of one picture in the slideshow; must copy and paste whole section to make new page in slideshow -->
         <div class="mySlides fade">
             <div class="bg">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/duck1.png" style="width:100%">
@@ -300,6 +300,7 @@
             </div>
         </div>
 
+        <!-- Beginning of one picture in the slideshow -->
         <div class="mySlides fade">
             <div class="bg">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/duck2.png" style="width:100%">
@@ -329,7 +330,8 @@
                 </div>
             </div>
         </div>
-
+        
+        <!-- Beginning of one picture in the slideshow -->
         <div class="mySlides fade">
             <div class="bg">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/duck3.png" style="width:100%">
@@ -359,6 +361,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
