--- a/newHomepage/contactUs.html
+++ b/newHomepage/contactUs.html
@@ -19,6 +19,7 @@
     }
 
 
+    /* removes timezone button visibility */
     .s-lc-timezone {
         display: none;
     }
@@ -65,21 +66,25 @@
                     
     <div class="contact-buttons">
 
+        <!-- telephone -->
         <div class="contact-row">
             <img class="icon-phone" src="https://libapps.s3.amazonaws.com/customers/9396/images/phone.png" />
             <a id="phone-button" href="tel:4105163817"> 410-516-3817 </a>
         </div>
 
+        <!-- email -->
         <div class="contact-row">
             <img class="icon-phone" src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/mark_email_unread.png" />
             <a id="email-button" href="mailto:cmc@jhu.edu"> cmc@jhu.edu </a>
         </div>
 
+        <!-- instagram -->
         <div class="contact-row">
             <img class="icon-phone" src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/Instagram.png" />
             <a id="insta-button" href="https://www.instagram.com/cmcjhu/">Instagram</a>
         </div>
 
+        <!-- linktree -->
         <div class="contact-row">
             <img class="icon-phone" src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/linktree.png" />
             <a id="linktree-button" href="https://linktr.ee/cmcjhu">Linktree</a>
